[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["archive_db"]

[project]
name = "archive-db"
version = "1.2.0"
authors = [
    {name = "SNP&SEQ Technology Platform, Uppsala University", email = "seq@medsci.uu.se" },
]
keywords = ["bioinformatics"]
description = "Micro-service that serves as a frontend for a simple SQL db"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "peewee",
    "tornado",
    "arteria @ git+https://github.com/arteria-project/arteria-core.git"
]

[project.optional-dependencies]
test = [
    "nose"
]

[project.scripts]
archive-db-ws = "archive_db.app:start"

[project.urls]
homepage = "https://github.com/Molmed/snpseq-archive-db"