[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["archive_db*"]

[project]
name = "archive-db"
version = "1.4.0"
authors = [
    {name = "SNP&SEQ Technology Platform, Uppsala University", email = "seq@medsci.uu.se" },
]
keywords = ["bioinformatics"]
description = "Micro-service that serves as a frontend for a simple SQL db"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "peewee==3.16.0",
    "tornado==6.2",
    "arteria==1.1.4"
]

[project.optional-dependencies]
test = [
    "nose==1.3.7"
]

[project.scripts]
archive-db-ws = "archive_db.app:start"

[project.urls]
homepage = "https://github.com/Molmed/snpseq-archive-db"
